<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/tc_black12">


        <customview.CustomHeaderView
            android:id="@+id/change_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:custom_header_right_text="@string/skip"
            app:custom_header_title="@string/change_password" />

    <View
        android:id="@+id/top_v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_below="@id/change_password_header"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/tc_black12"/>

    <EditText
        android:id="@+id/new_password_et"
        style="@style/EditTextBase.User"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:inputType="textPassword"
        android:layout_below="@id/top_v"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/new_password"/>

    <View
        android:id="@+id/center_white_v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_below="@id/new_password_et"
        android:background="@color/white"/>

    <View
        android:id="@+id/center_v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_below="@id/new_password_et"
        android:layout_marginStart="@dimen/margin_16dp"
        android:background="@color/tc_black12"/>

    <EditText
        android:id="@+id/confirm_password_et"
        style="@style/EditTextBase.User"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_44dp"
        android:layout_below="@id/center_v"
        android:inputType="textPassword"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_below="@id/confirm_password_et"
        android:background="@color/tc_black12"/>

    <customview.CustomButton
        android:id="@+id/change_password_cb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48dp"
        android:background="@color/button_color"
        android:layout_below="@id/confirm_password_et"
        android:layout_marginTop="@dimen/margin_10dp"
        app:custom_button_text="@string/update"/>

    <TextView
        android:id="@+id/forgot_password_tv"
        style="@style/TextViewBase.HintDescription"
        android:layout_below="@id/change_password_cb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_21dp"
        android:text="Min. 8 chars, at least 1 alphabet and 1 number."/>
  </RelativeLayout>

</FrameLayout>
