<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tc_black12">


    <customview.CustomHeaderView
      android:id="@+id/login_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:custom_header_left_action_ic_src="@drawable/ic_back"
      app:custom_header_title="@string/login"/>

    <View
      android:id="@+id/top_v"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_1dp"
      android:layout_below="@id/login_header"
      android:layout_marginTop="@dimen/margin_16dp"
      android:background="@color/tc_black12"/>

    <EditText
      android:id="@+id/login_user_et"
      style="@style/EditTextBase.User"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_44dp"
      android:layout_below="@id/top_v"
      android:background="@color/white"
      android:fontFamily="sans-serif"
      android:gravity="center_vertical"
      android:hint="@string/email_or_user"
      android:text=""/>

    <View
      android:id="@+id/center_white_v"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_1dp"
      android:layout_below="@id/login_user_et"
      android:background="@color/white"/>

    <View
      android:id="@+id/center_v"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_1dp"
      android:layout_below="@id/login_user_et"
      android:layout_marginStart="@dimen/margin_16dp"
      android:background="@color/tc_black12"/>

    <EditText
      android:id="@+id/login_password_et"
      style="@style/EditTextBase.User"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_44dp"
      android:layout_below="@id/center_v"
      android:background="@color/white"
      android:fontFamily="sans-serif"
      android:gravity="center_vertical"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:text=""/>

    <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_1dp"
      android:layout_below="@id/login_password_et"
      android:background="@color/tc_black12"/>

    <customview.CustomButton
      android:id="@+id/login_cb"
      android:layout_width="match_parent"
      android:layout_height="@dimen/size_48dp"
      android:layout_below="@id/login_password_et"
      android:layout_marginTop="@dimen/margin_10dp"
      android:background="@color/button_color"
      app:custom_button_text="@string/login"/>

    <TextView
      android:id="@+id/forgot_password_tv"
      style="@style/TextViewBase.HintDescription"
      android:layout_below="@id/login_cb"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/margin_21dp"
      android:text="@string/forgot_password"/>
  </RelativeLayout>
</FrameLayout>
